* 2005-12-01  0.6.1.7 released 2005-12-01  jrandom     * Add a new criteria to the tunnel join throttle, backing off people if we       are failing to talk to our peers more than usual.
Monotone-Parent: 68499dee78adcaf17fcbd5e611d77191fccdc12e
Monotone-Revision: c9a335e5297cebbdef455e89f6cb0e81171f6123

Monotone-Author: jrandom
Monotone-Date: 2005-12-01T17:16:53
Monotone-Branch: i2p.i2p
Monotone-Tag: i2p_0_6_1_7

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,10 @@
-$Id: history.txt,v 1.339 2005/11/30 15:48:27 jrandom Exp $
+$Id: history.txt,v 1.340 2005/11/30 20:13:45 jrandom Exp $
+
+* 2005-12-01  0.6.1.7 released
+
+2005-12-01  jrandom
+    * Add a new criteria to the tunnel join throttle, backing off people if we
+      are failing to talk to our peers more than usual.
 
 2005-11-30  jrandom
     * Cleaned up the build process to deal with Jetty 5.1.6 and rename the
