2005-12-03  jrandom     * Adjusted Syndie to use the threaded view that cervantes suggested, which       displays a a single thread path at a time - from root to leaf - rather       than a depth first traversal.
Monotone-Parent: 345c737e24ba48950658b9f720eab914b842743c
Monotone-Revision: 271c2f0c2b9e2244e7c9a4c3ed513d0139e314da

Monotone-Author: jrandom
Monotone-Date: 2005-12-03T17:33:35
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.341 2005/12/01 12:16:53 jrandom Exp $
+$Id: history.txt,v 1.342 2005/12/03 00:41:25 jrandom Exp $
+
+2005-12-03  jrandom
+    * Adjusted Syndie to use the threaded view that cervantes suggested, which
+      displays a a single thread path at a time - from root to leaf - rather
+      than a depth first traversal.
 
 2005-12-03  jrandom
     * Package up a standalone Syndie install into a "syndie-standalone.zip",
