2005-12-03  jrandom     * Use newgroup-like tags by default in Syndie's interface
Monotone-Parent: 42974ffc39b21a1d511b8ba0e12ecf2f6ed599da
Monotone-Revision: bb6c5f743cd63ade15adc83ca57c0e45c3e0600f

Monotone-Author: jrandom
Monotone-Date: 2005-12-04T03:18:08
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.343 2005/12/03 12:33:35 jrandom Exp $
+$Id: history.txt,v 1.344 2005/12/03 14:03:46 jrandom Exp $
+
+2005-12-03  jrandom
+    * Use newgroup-like tags by default in Syndie's interface
 
 2005-12-03  jrandom
     * Added support for a 'most recent posts' view that CofE requested, which
