2005-12-04  jrandom     * Bugfix in Syndie for a problem in the threaded indexer (thanks CofE!)     * Always include ourselves in the favorite authors (since we don't       bookmark ourselves)
Monotone-Parent: 9e0ca4395c3c97e795fd5cd0ffd987b645cc18d3
Monotone-Revision: 69a41bbc63d111c15740d9ad243b6ae933028662

Monotone-Author: jrandom
Monotone-Date: 2005-12-04T20:02:24
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.344 2005/12/03 14:03:46 jrandom Exp $
+$Id: history.txt,v 1.345 2005/12/03 22:18:09 jrandom Exp $
+
+2005-12-04  jrandom
+    * Bugfix in Syndie for a problem in the threaded indexer (thanks CofE!)
+    * Always include ourselves in the favorite authors (since we don't
+      bookmark ourselves)
 
 2005-12-03  jrandom
     * Use newgroup-like tags by default in Syndie's interface
