2005-12-04  TLorD     * Patch for the C SAM library to null terminate strings on copy (thanks!)
Monotone-Parent: 69a41bbc63d111c15740d9ad243b6ae933028662
Monotone-Revision: 355c2d2178d0fcf3c6e831fe975c8c2c4d5602f2

Monotone-Author: jrandom
Monotone-Date: 2005-12-04T20:12:19
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.345 2005/12/03 22:18:09 jrandom Exp $
+$Id: history.txt,v 1.346 2005/12/04 15:02:25 jrandom Exp $
+
+2005-12-04  TLorD
+    * Patch for the C SAM library to null terminate strings on copy (thanks!)
 
 2005-12-04  jrandom
     * Bugfix in Syndie for a problem in the threaded indexer (thanks CofE!)
