2005-12-05  jrandom     * Added an RDF and XML thread export to Syndie, reachable at       .../threadnav/rdf or .../threadnav/xml, accepting the parameters       count=$numThreads and offset=$threadIndex.  If the $numThreads is -1, it       displays all threads.
Monotone-Parent: 355c2d2178d0fcf3c6e831fe975c8c2c4d5602f2
Monotone-Revision: 2e07981a8a1d3d0880f4cd50b81efd5d51f48352

Monotone-Author: jrandom
Monotone-Date: 2005-12-05T06:14:15
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,10 @@
-$Id: history.txt,v 1.346 2005/12/04 15:02:25 jrandom Exp $
+$Id: history.txt,v 1.347 2005/12/04 15:12:19 jrandom Exp $
+
+2005-12-05  jrandom
+    * Added an RDF and XML thread export to Syndie, reachable at 
+      .../threadnav/rdf or .../threadnav/xml, accepting the parameters
+      count=$numThreads and offset=$threadIndex.  If the $numThreads is -1, it
+      displays all threads.
 
 2005-12-04  TLorD
     * Patch for the C SAM library to null terminate strings on copy (thanks!)
