2005-12-07  jrandom     * Expand the thread we're viewing to its leaf     * Bugfix on intraday ordering (children are always newer than parents)
Monotone-Parent: 2e07981a8a1d3d0880f4cd50b81efd5d51f48352
Monotone-Revision: 93d0860ecd1800a011b53aea8f34681126d45b5b

Monotone-Author: jrandom
Monotone-Date: 2005-12-07T20:19:42
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.347 2005/12/04 15:12:19 jrandom Exp $
+$Id: history.txt,v 1.348 2005/12/05 01:14:16 jrandom Exp $
+
+2005-12-07  jrandom
+    * Expand the thread we're viewing to its leaf
+    * Bugfix on intraday ordering (children are always newer than parents)
 
 2005-12-05  jrandom
     * Added an RDF and XML thread export to Syndie, reachable at 
