2005-12-07  jrandom     * Added a first pass at a blog view in Syndie
Monotone-Parent: 93d0860ecd1800a011b53aea8f34681126d45b5b
Monotone-Revision: 65b629e7c3cd3e0147ce2cd64e1b5db0281170b8

Monotone-Author: jrandom
Monotone-Date: 2005-12-08T00:50:32
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.348 2005/12/05 01:14:16 jrandom Exp $
+$Id: history.txt,v 1.349 2005/12/07 15:19:43 jrandom Exp $
+
+2005-12-07  jrandom
+    * Added a first pass at a blog view in Syndie
 
 2005-12-07  jrandom
     * Expand the thread we're viewing to its leaf
