2005-12-08  jrandom     * Minor bugfix in SSU for dealing with corrupt packets     * Added some hooks for load testing
Monotone-Parent: 65b629e7c3cd3e0147ce2cd64e1b5db0281170b8
Monotone-Revision: 6a8d9840f289b5fd55c6ca7962bb0f4efecf6365

Monotone-Author: jrandom
Monotone-Date: 2005-12-08T20:53:41
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.349 2005/12/07 15:19:43 jrandom Exp $
+$Id: history.txt,v 1.350 2005/12/07 19:50:35 jrandom Exp $
+
+2005-12-08  jrandom
+    * Minor bugfix in SSU for dealing with corrupt packets
+    * Added some hooks for load testing
 
 2005-12-07  jrandom
     * Added a first pass at a blog view in Syndie
