2005-12-13  zzz     * Don't test tunnels expiring within 90 seconds     * Defer Test Tunnel jobs if job lag too large     * Use JobQueue.getMaxLag() rather than the jobQueue.jobLag stat to measure       job lag for tunnel build backoff, allowing for more agile handling       (since the stat is only updated once a minute)     * Use tunnel length override if all tunnels are expiring within one       minute.
Monotone-Parent: 3039cea8266f405fa8a4391fe486e583c5573b9f
Monotone-Revision: 0d6e34e86aaaba95943281c0d03c32b755a07109

Monotone-Author: jrandom
Monotone-Date: 2005-12-13T21:56:41
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,13 @@
-$Id: history.txt,v 1.352 2005/12/09 03:05:48 jrandom Exp $
+$Id: history.txt,v 1.353 2005/12/13 04:38:52 jrandom Exp $
+
+2005-12-13  zzz
+    * Don't test tunnels expiring within 90 seconds
+    * Defer Test Tunnel jobs if job lag too large
+    * Use JobQueue.getMaxLag() rather than the jobQueue.jobLag stat to measure
+      job lag for tunnel build backoff, allowing for more agile handling
+      (since the stat is only updated once a minute)
+    * Use tunnel length override if all tunnels are expiring within one
+      minute.
 
 2005-12-13  jrandom
     * Fixed I2PSnark's handling of some torrent files to deal with those
