2005-12-14  jrandom     * Fix to drop peer references when we shitlist people again (thanks zzz!)     * Further I2PSnark fixes to deal with arbitrary torrent info attributes       (thanks Complication!)
Monotone-Parent: 0d6e34e86aaaba95943281c0d03c32b755a07109
Monotone-Revision: 605a3eb07117f84cb93dd931ca2bbc288e0f0013

Monotone-Author: jrandom
Monotone-Date: 2005-12-14T09:32:50
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.353 2005/12/13 04:38:52 jrandom Exp $
+$Id: history.txt,v 1.354 2005/12/13 16:56:41 jrandom Exp $
+
+2005-12-14  jrandom
+    * Fix to drop peer references when we shitlist people again (thanks zzz!)
+    * Further I2PSnark fixes to deal with arbitrary torrent info attributes
+      (thanks Complication!)
 
 2005-12-13  zzz
     * Don't test tunnels expiring within 90 seconds
