2005-12-15  jrandom     * Added a first pass to the I2PSnark web UI (see /i2psnark/)
Monotone-Parent: 29a5dbe8253da970cbbfac7a76a39727a3d475b3
Monotone-Revision: 9ccae4b6d14777e3efa6725cb703e2a95e3fcafc

Monotone-Author: jrandom
Monotone-Date: 2005-12-16T03:00:48
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.355 2005/12/14 04:32:52 jrandom Exp $
+$Id: history.txt,v 1.356 2005/12/15 03:58:31 jrandom Exp $
+
+2005-12-15  jrandom
+    * Added a first pass to the I2PSnark web UI (see /i2psnark/)
 
 2005-12-15  jrandom
     * Added multitorrent support to I2PSnark, accessible currently by running
