2005-12-16  jrandom     * Refuse torrents with too many files (128), avoiding ulimit errors.     * Remove an fd leak in I2PSnark     * Further I2PSnark web UI cleanup
Monotone-Parent: d492e83097c5e518460dd49487833ce30e07c6aa
Monotone-Revision: c7c87a9f62b702267d8e53ba2072642b56c02893

Monotone-Author: jrandom
Monotone-Date: 2005-12-16T08:24:21
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.356 2005/12/15 03:58:31 jrandom Exp $
+$Id: history.txt,v 1.357 2005/12/15 22:00:48 jrandom Exp $
+
+2005-12-16  jrandom
+    * Refuse torrents with too many files (128), avoiding ulimit errors.
+    * Remove an fd leak in I2PSnark
+    * Further I2PSnark web UI cleanup
 
 2005-12-15  jrandom
     * Added a first pass to the I2PSnark web UI (see /i2psnark/)
