2005-12-16  jrandom     * Try to run a torrent in readonly mode if we can't write to the file, and       handle failures a little more gracefully (thanks polecat!)
Monotone-Parent: c7c87a9f62b702267d8e53ba2072642b56c02893
Monotone-Revision: 93ca5515c7e929b06607aef17639cece155b79fb

Monotone-Author: jrandom
Monotone-Date: 2005-12-16T11:01:20
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.357 2005/12/15 22:00:48 jrandom Exp $
+$Id: history.txt,v 1.358 2005/12/16 03:24:22 jrandom Exp $
+
+2005-12-16  jrandom
+    * Try to run a torrent in readonly mode if we can't write to the file, and
+      handle failures a little more gracefully (thanks polecat!)
 
 2005-12-16  jrandom
     * Refuse torrents with too many files (128), avoiding ulimit errors.
