2005-12-17  jrandom     * Use our faster SHA1, rather than the JVM's within I2PSnark, and let       'piece' sizes grow larger than before.
Monotone-Parent: f6eef3ce3e2f118c41328fc0c41e63de208524b2
Monotone-Revision: e5b813c9e50efee7c5c43e1a5275141dd02044d7

Monotone-Author: jrandom
Monotone-Date: 2005-12-17T09:22:07
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.360 2005/12/16 18:18:56 jrandom Exp $
+$Id: history.txt,v 1.361 2005/12/16 22:47:04 jrandom Exp $
+
+2005-12-17  jrandom
+    * Use our faster SHA1, rather than the JVM's within I2PSnark, and let
+      'piece' sizes grow larger than before.
 
 2005-12-16  jrandom
     * Added some I2PSnark sanity checks, an OOMListener when running
