2005-12-19  jrandom     * Fix for old Syndie blog bookmarks (thanks Complication!)     * Fix for I2PSnark to accept incoming connections again (oops)     * Randomize the order that peers from the tracker are contacted
Monotone-Parent: fe407af0e5b1d3a65ced94e84ed36001a716acb1
Monotone-Revision: dc7560c11e514b9bb0658f0c24e041aa6a3c5f00

Monotone-Author: jrandom
Monotone-Date: 2005-12-20T02:01:37
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.363 2005/12/18 00:39:54 jrandom Exp $
+$Id: history.txt,v 1.364 2005/12/19 08:34:56 jrandom Exp $
+
+2005-12-19  jrandom
+    * Fix for old Syndie blog bookmarks (thanks Complication!)
+    * Fix for I2PSnark to accept incoming connections again (oops)
+    * Randomize the order that peers from the tracker are contacted
 
 2005-12-19  jrandom
     * I2PSnark logging, disconnect old inactive peers rather than new ones,
