2005-12-22  jrandom     * Cleaned up some buffer synchronization issues in I2PSnark that could        cause blockage.
Monotone-Parent: f4fc41071d91528647148d50f6f895af3578da01
Monotone-Revision: 526f8174facf8a15fa6fc93323d7b92f39743622

Monotone-Author: jrandom
Monotone-Date: 2005-12-22T10:04:12
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.365 2005/12/19 21:01:37 jrandom Exp $
+$Id: history.txt,v 1.366 2005/12/21 07:04:56 jrandom Exp $
+
+2005-12-22  jrandom
+    * Cleaned up some buffer synchronization issues in I2PSnark that could
+       cause blockage.
 
 2005-12-21  jrandom
     * Adjusted I2PSnark's usage of the streaming lib (tweaking it for BT's
