* 2005-12-22  0.6.1.8 released 2005-12-22  jrandom     * Bundle the standalone I2PSnark launcher in the installer and update       process (launch as "java -jar launch-i2psnark.jar", viewing the       interface on http://localhost:8002/)     * Don't autostart swarming torrents by default so that you can run a       standalone I2PSnark from the I2P install dir and not have the embedded       I2PSnark autolaunch the torrents that the standalone instance is running     * Fixed a rare streaming lib bug that could let a blocking call wait       forever.
Monotone-Parent: d641070f55ce5225259d578af8cba17d9dd18ca4
Monotone-Revision: bde2522834cbfecaf3c624bc7d3b0ec91d7ccb40

Monotone-Author: jrandom
Monotone-Date: 2005-12-22T12:49:09
Monotone-Branch: i2p.i2p
Monotone-Tag: i2p_0_6_1_8

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,16 @@
-$Id: history.txt,v 1.367 2005/12/22 05:04:15 jrandom Exp $
+$Id: history.txt,v 1.368 2005/12/22 05:10:39 jrandom Exp $
+
+* 2005-12-22  0.6.1.8 released
+
+2005-12-22  jrandom
+    * Bundle the standalone I2PSnark launcher in the installer and update
+      process (launch as "java -jar launch-i2psnark.jar", viewing the 
+      interface on http://localhost:8002/)
+    * Don't autostart swarming torrents by default so that you can run a
+      standalone I2PSnark from the I2P install dir and not have the embedded
+      I2PSnark autolaunch the torrents that the standalone instance is running
+    * Fixed a rare streaming lib bug that could let a blocking call wait
+      forever.
 
 2005-12-22  jrandom
     * Cleaned up some buffer synchronization issues in I2PSnark that could
