2005-12-26  Complication     * Fix some integer typecasting in I2PSnark (caused >2GB torrents to fail)     * HTML readability cosmetics on "Peers" page
Monotone-Parent: ad3fa2304d24dea59178235ff3500731a31d8af8
Monotone-Revision: 37dbe8be1122360a4d97a5ff840d08eb5add5657

Monotone-Author: complication
Monotone-Date: 2005-12-27T04:20:29
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.368 2005/12/22 05:10:39 jrandom Exp $
+$Id: history.txt,v 1.369 2005/12/22 07:49:09 jrandom Exp $
+
+2005-12-26  Complication
+    * Fix some integer typecasting in I2PSnark (caused >2GB torrents to fail)
+    * HTML readability cosmetics on "Peers" page
 
 * 2005-12-22  0.6.1.8 released
 
