2005-12-27  jrandom     * Add a new Status: line on the router console - "ERR-ClockSkew", in case       the clock is too skewed to do anything useful (check the year and month,       not just the hour and minute).     * Fixed the read/write timeouts in the streaming lib (so that it actually       honors them now)     * Minor I2PSnark cleanups (no read timeout, more careful shutdown and       torrent closing)     * Handle an oddball tunnel creation failure (thanks Xunk)
Monotone-Parent: 37dbe8be1122360a4d97a5ff840d08eb5add5657
Monotone-Revision: 6e6b9cdf8d024389a0bdc0c0762f81f12699bbf6

Monotone-Author: jrandom
Monotone-Date: 2005-12-27T13:20:50
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,14 @@
-$Id: history.txt,v 1.369 2005/12/22 07:49:09 jrandom Exp $
+$Id: history.txt,v 1.370 2005/12/26 23:20:29 complication Exp $
+
+2005-12-27  jrandom
+    * Add a new Status: line on the router console - "ERR-ClockSkew", in case
+      the clock is too skewed to do anything useful (check the year and month,
+      not just the hour and minute).
+    * Fixed the read/write timeouts in the streaming lib (so that it actually
+      honors them now)
+    * Minor I2PSnark cleanups (no read timeout, more careful shutdown and
+      torrent closing)
+    * Handle an oddball tunnel creation failure (thanks Xunk)
 
 2005-12-26  Complication
     * Fix some integer typecasting in I2PSnark (caused >2GB torrents to fail)
