--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.370 2005/12/26 23:20:29 complication Exp $
+$Id: history.txt,v 1.371 2005/12/27 08:20:55 jrandom Exp $
+
+2005-12-29  jrandom
+    * Minor fix to the new ERR-ClockSkew to deal with people whose clocks are
+      actually correct
 
 2005-12-27  jrandom
     * Add a new Status: line on the router console - "ERR-ClockSkew", in case
