2005-12-30  jrandom     * Small streaming lib bugfixes for the modified timeouts     * Minor Syndie/Sucker RSS html fix     * Small synchronization fix in I2PSnark (thanks fsm!)
Monotone-Parent: 6423922000c86d430746cccd08158e948fbdb83b
Monotone-Revision: 1af4bef325c09091ad67f1d414f87e05be4d7c69

Monotone-Author: jrandom
Monotone-Date: 2005-12-30T20:57:53
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.372 2005/12/29 08:07:22 jrandom Exp $
+$Id: history.txt,v 1.373 2005/12/30 13:16:46 jrandom Exp $
+
+2005-12-30  jrandom
+    * Small streaming lib bugfixes for the modified timeouts
+    * Minor Syndie/Sucker RSS html fix
+    * Small synchronization fix in I2PSnark (thanks fsm!)
 
 2005-12-30  jrandom
     * Replaced the bundled linux jcpuid (written in C++) with scintilla's
