2005-12-30  jrandom     * Close streams more gracefully
Monotone-Parent: 1af4bef325c09091ad67f1d414f87e05be4d7c69
Monotone-Revision: 3fdfbc350dbba7679841adce2160daceb1164bba

Monotone-Author: jrandom
Monotone-Date: 2005-12-30T23:33:52
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.373 2005/12/30 13:16:46 jrandom Exp $
+$Id: history.txt,v 1.374 2005/12/30 15:57:53 jrandom Exp $
+
+2005-12-30  jrandom
+    * Close streams more gracefully
 
 2005-12-30  jrandom
     * Small streaming lib bugfixes for the modified timeouts
