--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,10 @@
-$Id: history.txt,v 1.374 2005/12/30 15:57:53 jrandom Exp $
+$Id: history.txt,v 1.375 2005/12/30 18:33:54 jrandom Exp $
+
+2005-12-31  jrandom
+    * Include a simple torrent creator in the I2PSnark web UI
+    * Further streaming lib closing improvements
+    * Refactored the load test components to run off live tunnels (though,
+      still not safe for normal/anonymous load testing)
 
 2005-12-30  jrandom
     * Close streams more gracefully
