2006-01-01  jrandom     * Disable multifile torrent creation in I2PSnark's web UI for the moment       (though it can still seed and participate in multifile swarms)     * Enable a new speed calculation for profiling peers, using their peak       1 minute average tunnel throughput as their speed.
Monotone-Parent: 00f19dedda1dd492f27b88e8eea8c5ecac5e8795
Monotone-Revision: 674099cbbc9166634318abd06fc3069c2f5bac9d

Monotone-Author: jrandom
Monotone-Date: 2006-01-01T17:23:26
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,10 @@
-$Id: history.txt,v 1.375 2005/12/30 18:33:54 jrandom Exp $
+$Id: history.txt,v 1.376 2005/12/31 18:40:23 jrandom Exp $
+
+2006-01-01  jrandom
+    * Disable multifile torrent creation in I2PSnark's web UI for the moment
+      (though it can still seed and participate in multifile swarms)
+    * Enable a new speed calculation for profiling peers, using their peak 
+      1 minute average tunnel throughput as their speed.
 
 2005-12-31  jrandom
     * Include a simple torrent creator in the I2PSnark web UI
