2006-01-08  jrandom     * First pass of the new blog interface, though without much of the useful       customization features (coming soon)
Monotone-Parent: f99bad09b04aa7a04baf443d5ebbc8e8fd13a3cc
Monotone-Revision: 3333ce84532d439810be7a73664eb911cf6c660a

Monotone-Author: jrandom
Monotone-Date: 2006-01-08T20:54:36
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.377 2006/01/01 12:23:29 jrandom Exp $
+$Id: history.txt,v 1.378 2006/01/04 21:48:17 jrandom Exp $
+
+2006-01-08  jrandom
+    * First pass of the new blog interface, though without much of the useful
+      customization features (coming soon)
 
 2006-01-04  jrandom
     * Rather than profile individual tunnels for throughput over their
